# elo-group

consultoria laboratorio/: Makefile  README.md  pyproject.toml
consultoria laboratorio/notebooks/: sanity_check.ipynb
