[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Projeto de ci\u00eancia de dados focado em apoiar a expans\u00e3o estrat\u00e9gica de uma rede de laborat\u00f3rios de medicina diagn\u00f3stica nos EUA, por meio da an\u00e1lise integrada de dados demogr\u00e1ficos, econ\u00f4micos e transacionais em n\u00edvel de ZCTA."
authors = [
  { name = "Gustavo Monteiro" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


